[Qt] Build fix after r135217. https://bugs.webkit.org/show_bug.cgi?id=102787

* platform/win/WindowsExtras.h: Add #undef of NOSHLWAPI to
allow include of <ObjBase.h> needed by Qt build.



git-svn-id: svn://svn.chromium.org/blink/trunk@135312 bbb929c8-8fbe-4397-9dbb-9b2b20218538