third_party/WebKit/Source/WebCore/platform/win/WindowsExtras.h
@@ -27,6 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define WindowsExtras_h
 
 #include <windows.h>
+#undef NOSHLWAPI
 #include <shlwapi.h>
 
 namespace WebCore {
